Fix HR padding on mobile view]

--- a/css/sass/3-particles/_hr.scss
+++ b/css/sass/3-particles/_hr.scss
@@ -20,6 +20,10 @@ hr {
 		}
 	}
 
+	&.row {
+		padding: 0;
+	}
+
 	&.hr--no-pointer {
 		&:after { content: none; }
 	}
